# zserio-1

./: .gitlab-ci.yml  .gitmodules  TODO.md
cmake/: curl_utils.cmake
compiler/core/antlr/: ExpressionEvaluator.g  TypeEvaluator.g  ZserioEmitter.g  ZserioLexer.g4  ZserioParser.g  ZserioParser.g4
compiler/core/src/zserio/ast/: CompoundType.java  Field.java  Root.java  RpcType.java  ServiceType.java  StructureType.java  TemplateParameter.java  TemplateSymbol.java  TokenAST.java  TopicType.java  TypeInstantiation.java  ZserioAstBuilder.java  ZserioAstDefaultVisitor.java  ZserioAstEmitter.java  ZserioAstVisitor.java  ZserioAstWalker.java  ZserioTypeCheckerVisitor.java  ZserioTypeVisitor.java
compiler/core/src/zserio/emit/common/: CodeDefaultEmitter.java  DefaultEmitter.java  Emitter.java  PackageMapper.java
compiler/core/src/zserio/emit/common/sql/: SqlNativeTypeMapper.java
compiler/core/src/zserio/tools/: CommandLineArguments.java  ExtensionParameters.java  Parameters.java  ZserioTypeCheckerVisitor.java
compiler/core/test/zserio/antlr/: ZserioLexerTest.java  ZserioParserTest.java
compiler/extensions/cpp/freemarker/: CompoundConstructor.inc.ftl  CompoundField.inc.ftl  CompoundParameter.inc.ftl  Enumeration.cpp.ftl  Enumeration.h.ftl  IService.h.ftl  ServiceFactory.cpp.ftl  ServiceFactory.h.ftl  ServiceFactory.inc.ftl  Structure.cpp.ftl  Structure.h.ftl  Topic.cpp.ftl  Topic.h.ftl  UriService.cpp.ftl  UriService.h.ftl
compiler/extensions/cpp/runtime/src/: CMakeLists.txt
compiler/extensions/cpp/runtime/src/zserio/: AnyHolder.h  MqttPubSubClient.cpp  MqttPubSubClient.h  PubSubClient.cpp  PubSubClient.h  PubSubSystem.cpp  PubSubSystem.h  Publisher.cpp  Publisher.h  Reflectable.h  RosPubSubClient.cpp  RosPubSubClient.h  RtpsClient.cpp  RtpsClient.h  Subscriber.cpp  Subscriber.h  Topic.cpp  Topic.h  UrlClient.cpp  UrlClient.h  ZserioWrapper.h
compiler/extensions/cpp/runtime/test/zserio/: UrlClientTest.cpp
compiler/extensions/cpp/src/zserio/emit/cpp/: ChoiceEmitterTemplateData.java  CompoundFieldTemplateData.java  CompoundTypeTemplateData.java  CppDefaultEmitter.java  CppExtension.java  CppNativeMapper.java  CppNativeTypeMapper.java  CppRuntimeFunctionDataCreator.java  ServiceEmitter.java  ServiceEmitterTemplateData.java  StructureEmitter.java  StructureEmitterTemplateData.java  TopicEmitter.java  TopicEmitterTemplateData.java
compiler/extensions/cpp/src/zserio/emit/cpp/types/: NativeCompoundType.java  NativeObjectArrayType.java  NativeUnboundTemplateType.java
compiler/extensions/cpp98/src/zserio/emit/cpp98/: CppNativeMapper.java
compiler/extensions/doc/src/zserio/emit/doc/: CompoundEmitter.java  HtmlModuleNameSuffixVisitor.java  TypeNameEmitter.java
scripts/: test.sh
test/arguments/without_grpc_code/: CMakeLists.txt  build.xml
test/arguments/without_grpc_code/python/: WithoutGrpcCodeTest.py
test/language/templates/: CMakeLists.txt
test/language/templates/cpp/: InstantiateImportedNestedTest.cpp
test/language/templates/zs/: templates.zs
test/language/templates/zs/templates/: instantiate_imported_nested.zs
test/language/templates/zs/templates/instantiate_imported_nested/: pkg.zs
test/language/topic_types/: CMakeLists.txt  build.xml
test/language/topic_types/cpp/: TopicOk.cpp
test/language/topic_types/zs/: topic_types.zs
test/language/topic_types/zs/topic_types/: topic_ok.zs
